<resources>
    <string name="app_name">Project</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="one"><u>one</u></string>
    <string name="no_account_yet_create">No account yet? Create</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_maps">Map</string>
    <string name="enterEmail">Please Enter Email</string>
    <string name="enterPassword">Please Enter Password</string>
    <string name="verifyCredentials">Verifying Credentials...</string>
    <string name="wrongCredentials">Wrong Credentials</string>
    <string name="email_entry">Email</string>
    <string name="users">users</string>
    <string name="enter_first_name">Please Enter First Name</string>
    <string name="enter_last_name">Please Enter Last Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="register_user">Registering User...</string>
    <string name="registered">Registered</string>
    <string name="noSuccess">Not Successful</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="join_team">Join Team</string>
    <string name="not_yet_in_a_team">Not yet in a team?</string>
    <string name="create_team">Create Team</string>
    <string name="space" />
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="tie">Tie</string>
    <string name="no_score">No Score</string>
    <string name="your_teams">Your Teams:</string>
    <string name="fullName">fullName</string>
    <string name="teamName">teamName</string>
    <string name="Team_Name">Team Name</string>
    <string name="team">team</string>
    <string name="db_win">win</string>
    <string name="db_loss">lost</string>
    <string name="db_draw">draw</string>
    <string name="team_name">Team Name</string>
    <string name="team_members">Team members:</string>
    <string name="db_email">email</string>
    <string name="db_firstName">firstName</string>
    <string name="db_lastName">lastName</string>
    <string name="db_teamName">teamName</string>
    <string name="comma">,</string>
    <string name="equal">=</string>
    <string name="db_space" />
    <string name="string_blank" />
    <string name="Full_Name">Full Name</string>
    <string name="sport">Sport:</string>
    <string name="label_teamName">Team Name:</string>
    <string name="label_location">Location:</string>
    <string name="create">Create</string>
    <string name="Maps">Maps</string>
    <string name="db_team">team</string>
    <string name="errorOccured">An error occurred:</string>
    <string name="s_port">Sport:</string>
    <string name="team__name">Team Name:</string>
    <string name="opponent_team">Opponent Team:</string>
    <string name="location">Location:</string>
    <string name="choose_venue">Choose Venue</string>
    <string name="l_ocation">Location:</string>
    <string name="venue">Venue:</string>
    <string name="date_details">Date Details:</string>
    <string name="mmm_dd_yyyy">mmm/dd/yyyy</string>
    <string name="start_time">Start Time:</string>
    <string name="hh_mm">hh:mm</string>
    <string name="end_time">End Time:</string>
    <string name="hh__mm">hh:mm</string>
    <string name="book_venue">Book Venue</string>
    <string name="your_team">Your Team:</string>
    <string name="opponent__team">Opponent Team:</string>
    <string name="game_date">Game Date:</string>
    <string name="start__time">Start Time:</string>
    <string name="end__time">End Time:</string>
    <string name="venuee">Venue:</string>


</resources>
