<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a100535658.project.BookVenue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/book_venue_lbl_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_alignStart="@+id/book_venue_field_location"
            android:text="@string/l_ocation"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/book_venue_field_location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/book_venue_lbl_location"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/lbl_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/venue"
            android:textSize="18sp"
            android:layout_below="@+id/book_venue_field_location"
            android:layout_alignStart="@+id/book_venue_field_location" />

        <Spinner
            android:background="@drawable/custom_spinner_background"
            android:spinnerMode="dropdown"
            android:id="@+id/book_venue_spinner_venue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_venue"
            android:layout_alignStart="@+id/lbl_venue"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/book_venue_lbl_date_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_details"
            android:textSize="18sp"
            android:clickable="false"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/book_venue_spinner_venue"
            android:layout_alignStart="@+id/book_venue_field_date" />

        <EditText
            android:id="@+id/book_venue_field_date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/mmm_dd_yyyy"
            android:focusable="false"
            android:inputType="date"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/book_venue_lbl_date_details"
            android:layout_alignStart="@+id/book_venue_spinner_venue"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:text="@string/start_time"
            android:textSize="18sp"
            android:id="@+id/book_venue_lbl_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_venue_field_date"
            android:layout_alignStart="@+id/book_venue_field_date"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/book_venue_field_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/hh_mm"
            android:focusable="false"
            android:layout_below="@+id/book_venue_lbl_time"
            android:layout_alignStart="@+id/book_venue_lbl_time"
            android:layout_alignEnd="@+id/book_venue_field_date"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/book_venue_lbl_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="18sp"
            android:layout_below="@+id/book_venue_field_time_start"
            android:layout_alignStart="@+id/book_venue_field_time_end"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/book_venue_field_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/hh__mm"
            android:focusable="false"
            android:onClick="clickedTimeFieldEnd"
            android:layout_below="@+id/book_venue_lbl_end_time"
            android:layout_alignStart="@+id/book_venue_field_date"
            android:layout_marginTop="5dp"
            android:layout_alignEnd="@+id/book_venue_field_time_start" />

        <Button
            android:id="@+id/btn_book_venue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/book_venue"
            android:onClick="clickedBookedVenue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>