<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a100535658.project.CreateTeam">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/label_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:text="@string/sport"
            android:textSize="18sp"
            android:layout_alignStart="@+id/input_teamName" />

        <Spinner
            android:background="@drawable/custom_spinner_background"
            android:spinnerMode="dropdown"
            android:id="@+id/spinnerCustom"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_sport"
            android:layout_alignStart="@+id/label_sport"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/label_teamname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/input_teamName"
            android:layout_below="@+id/spinnerCustom"
            android:layout_marginTop="30dp"
            android:text="@string/label_teamName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_teamName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/label_teamname"
            android:clickable="true"
            android:hint="@string/Team_Name"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/input_teamName"
            android:layout_below="@+id/input_teamName"
            android:layout_marginTop="30dp"
            android:text="@string/label_location"
            android:textSize="18sp"/>

        <fragment
            android:id="@+id/place_autocomplete"
            android:layout_below="@+id/label_location"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/input_teamName" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/create"
            android:onClick="createTeam"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>