<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a100535658.project.FriendlyGame">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/lbl_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:text="@string/s_port"
            android:textSize="18sp"
            android:layout_alignStart="@+id/friendly_game_field_location"/>

        <Spinner
            android:background="@drawable/custom_spinner_background"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner_sport"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_sport"
            android:layout_alignStart="@+id/lbl_sport"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/myTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team__name"
            android:textSize="18sp"
            android:layout_below="@+id/spinner_sport"
            android:layout_alignStart="@+id/friendly_game_field_location"
            android:layout_marginTop="25dp" />

        <Spinner
            android:background="@drawable/custom_spinner_background"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myTeam"
            android:layout_alignStart="@+id/myTeam"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/lbl_opponent_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opponent_team"
            android:textSize="18sp"
            android:layout_below="@+id/spinner3"
            android:layout_alignStart="@+id/friendly_game_field_location"
            android:layout_marginTop="25dp" />

        <Spinner
            android:background="@drawable/custom_spinner_background"
            android:spinnerMode="dropdown"
            android:id="@+id/friendly_game_spinner_opponentTeam"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_opponent_team"
            android:layout_alignStart="@+id/lbl_opponent_team"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/friendly_game_lbl_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="18sp"
            android:layout_below="@+id/friendly_game_spinner_opponentTeam"
            android:layout_alignStart="@+id/friendly_game_spinner_opponentTeam"
            android:layout_marginTop="25dp" />

        <EditText
            android:id="@+id/friendly_game_field_location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/friendly_game_lbl_location"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_choose_venue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:onClick="chooseVenue"
            android:text="@string/choose_venue"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>