<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a100535658.project.BookingSummary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/lbl_team_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="53dp"
            android:text="@string/your_team"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/teamUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:layout_alignBaseline="@+id/lbl_team_used"
            android:layout_alignBottom="@+id/lbl_team_used"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/lbl_second_team" />

        <TextView
            android:id="@+id/lbl_second_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lbl_team_used"
            android:layout_below="@+id/lbl_team_used"
            android:layout_marginTop="50dp"
            android:text="@string/opponent__team"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/secondTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignBaseline="@+id/lbl_second_team"
            android:layout_alignBottom="@+id/lbl_second_team"
            android:layout_alignStart="@+id/teamUsed"
            android:layout_alignEnd="@+id/teamUsed"/>

        <TextView
            android:id="@+id/lbl_date_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lbl_second_team"
            android:layout_below="@+id/lbl_second_team"
            android:layout_marginTop="50dp"
            android:text="@string/game_date"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/dateStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignBaseline="@+id/lbl_date_started"
            android:layout_alignBottom="@+id/lbl_date_started"
            android:layout_alignStart="@+id/secondTeam"
            android:layout_alignEnd="@+id/teamUsed"/>

        <TextView
            android:id="@+id/lbl_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lbl_date_started"
            android:layout_below="@+id/lbl_date_started"
            android:layout_marginTop="50dp"
            android:text="@string/start__time"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignBaseline="@+id/lbl_start_time"
            android:layout_alignBottom="@+id/lbl_start_time"
            android:layout_alignStart="@+id/dateStarted"
            android:layout_alignEnd="@+id/teamUsed"/>

        <TextView
            android:id="@+id/lbl_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lbl_start_time"
            android:layout_below="@+id/lbl_start_time"
            android:layout_marginTop="50dp"
            android:text="@string/end__time"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignBaseline="@+id/lbl_end_time"
            android:layout_alignBottom="@+id/lbl_end_time"
            android:layout_alignStart="@+id/startTime"
            android:layout_alignTop="@+id/lbl_end_time"
            android:layout_alignEnd="@+id/teamUsed"/>

        <TextView
            android:id="@+id/lbl_venue_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lbl_end_time"
            android:layout_below="@+id/lbl_end_time"
            android:layout_marginTop="50dp"
            android:text="@string/venuee"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/venueSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignBaseline="@+id/lbl_venue_selected"
            android:layout_alignBottom="@+id/lbl_venue_selected"
            android:layout_alignStart="@+id/endTime"
            android:layout_alignTop="@+id/lbl_end_time"
            android:layout_alignEnd="@+id/teamUsed"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:headerLayout="@layout/header"
    app:menu="@menu/drawermenu"
    android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>